--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Shared/_LayoutNoContainer.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Shared/_LayoutNoContainer.cshtml
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Application Framework</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">RestaurantNetCore</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
