--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Shared/_LayoutNoContainer2.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Shared/_LayoutNoContainer2.cshtml
@@ -1,22 +1,43 @@
 ﻿<!DOCTYPE html>
-<html>
+<html ng-app="testApp">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Application Framework</title>
+    <title>@ViewData["Title"] - RestaurantNetCore</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
+        <script src="~/lib/angular/angular.js"></script>
+        <script src="~/lib/angular-resource/angular-resource.js"></script>
+        <script src="~/lib/ui-bootstrap.min/ui-bootstrap-tpls.min.js"></script>
+        <script src="~/lib/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js"></script>
+
+
+        <script src="~/Angular/Module.js"></script>
+        <script src="~/Angular/Controller.js"></script>
+        <script src="~/Angular/Service.js"></script>
     </environment>
     <environment names="Staging,Production">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
+        <script src="~/lib/angular/angular.js"></script>
+        <script src="~/lib/angular-resource/angular-resource.js"></script>
+        <script src="~/lib/ui-bootstrap.min/ui-bootstrap-tpls.min.js"></script>
+        <script src="~/lib/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js"></script>
+
+
+        <script src="~/Angular/Module.js"></script>
+        <script src="~/Angular/Controller.js"></script>
+        <script src="~/Angular/Service.js"></script>
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+
     </environment>
+
+
 </head>
-<body>
+<body style="overflow:hidden">
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -37,8 +58,8 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
 
-                    @if (User.IsInRole("Admin"))
-                    {
+                     @if (User.IsInRole("Admin"))
+                     {
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#">Restaurant<span class="caret"></span></a>
                             <ul class="dropdown-menu">
@@ -58,20 +79,14 @@
                                 <li><a asp-area="" asp-controller="ApplicationUserRole" asp-action="Index">Application User Role</a></li>
                             </ul>
                         </li>
-
-                    }
-                    
+                     }
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="container-fluid" ng-controller="testcontroller">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; 2017 - Application Framework</p>
-        </footer>
     </div>
 
     <environment names="Development">
