--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Waiter/Index.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Waiter/Index.cshtml
@@ -277,6 +277,11 @@
                     <div class="col-lg-3 col-lg-3s" ng-repeat="tab in dataTable">
                         <input type="button" class="btn btn-lg btn-lgs" data-toggle="modal" data-target="#myModal2" data-dismiss="modal" value="{{tab.TableName}}" data-backdrop="static" ng-click="GetMenu(tab.TableID, tab.TableName, typeID)" />
                     </div>
+                    <div ng-if="dataTable == false">
+                        <center>
+                            <h5>No Table Available</h5>
+                        </center>
+                    </div>
                 </div>
             </div>
             <div class="modal-footer">
