--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Home/Main.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Home/Main.cshtml
@@ -3,10 +3,19 @@
     ViewBag.Title = "Menu";
 }
 
-<div class="row" style="margin:auto;">
-    <a asp-controller="Kitchen" asp-action="Index"><img src="~/images/kitchen.jpg" /></a>
-    <a asp-controller="Waiter" asp-action="Index"><img src="~/images/order.png" /></a>
-    <a href="#"><img src="~/images/cashier.png" /></a>
-</div>
+<style>
+    .imgs{
+    width:25vw;
+    height:60vw;
+    } 
+</style>
+
+<center>
+    <div class="row" style="margin:auto; display:inline-block;">
+        <a asp-controller="Kitchen" asp-action="Index2"><img src="~/images/kitchen.jpg" class="imgs" /></a>
+        <a asp-controller="Waiter" asp-action="Index"><img src="~/images/order.png" class="imgs" /></a>
+        <a asp-controller="Waiter" asp-action="Index"><img src="~/images/cashier.png" class="imgs" /></a>
+    </div>
+</center>
 
 
