--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Shared/_LayoutNoContainer.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Shared/_LayoutNoContainer.cshtml
@@ -8,6 +8,7 @@
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
+        <link rel="stylesheet" href="~/css/media.css" />
         <script src="~/lib/angular/angular.js"></script>
         <script src="~/lib/angular-resource/angular-resource.js"></script>
         <script src="~/lib/ui-bootstrap.min/ui-bootstrap-tpls.min.js"></script>
