Kevin - Add Cancel Order For Admin

--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Waiter/Index.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Waiter/Index.cshtml
@@ -173,12 +173,22 @@
                                 <td ng-show="(isEditMode && item.Status == 'Order') ||(isEditAllMode)" style="width:30%"><input class="form-control" ng-model="item.Notes" /></td>
                                 <td ng-show="(isEditMode && item.Status != 'Order') ">{{item.Notes}}</td>
                                 <td>
-                                    @if (User.IsInRole("Admin") || User.IsInRole("Waiter"))
+                                    @if (User.IsInRole("Waiter"))
                                     {
                                         <button ng-if="item.Status == 'Order'" ng-click="cancel(item.OrderItemID,detailorder.OrderID)" class="btn btn-danger btn-xs btn-block">Cancel</button>
+
+                                    }
+                                    @if (User.IsInRole("Admin") || User.IsInRole("Waiter"))
+                                    {
+                                        
                                         <button ng-if="item.Status == 'FinishCook'" ng-click="serve(item.OrderItemID,detailorder.OrderID)" class="btn btn-primary btn-xs btn-block">Served</button>
                                     }
-                                    
+                                    @if (User.IsInRole("Admin"))
+                                    {
+                                        <button ng-click="cancelbyadmin(item.OrderItemID,detailorder.OrderID)" class="btn btn-danger btn-xs btn-block">Cancel</button>
+
+                                    }
+
                                 </td>
                             </tr>
                         </tbody>
@@ -274,7 +284,7 @@
             </div>
             <div class="modal-body">
                 <div class="row rows">
-                    <div class="col-lg-3 col-lg-3s" ng-repeat="tab in dataTable">
+                    <div class="col-lg-3 col-lg-3s col-md-3" ng-repeat="tab in dataTable">
                         <input type="button" class="btn btn-lg btn-lgs" data-toggle="modal" data-target="#myModal2" data-dismiss="modal" value="{{tab.TableName}}" data-backdrop="static" ng-click="GetMenu(tab.TableID, tab.TableName, typeID)" />
                     </div>
                 </div>
@@ -308,7 +318,7 @@
             </div>
             <div class="modal-body" style="height:480px;">
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-md-4">
                         @*drag and drop kak ria*@
                         <uib-tabset active="active">
                             <uib-tab ng-repeat="tab in menu.Category" heading="{{tab.CategoryName}}">
@@ -320,13 +330,16 @@
                                             <h4 style="text-align:center">{{item.MenuName}}</h4>
                                             <p style="font-size:13px; text-align:center;">{{item.Price}}</p>
                                         </li>
+                                        <li ng-if="tab.OrderItem == false">
+                                            <center><h3>Empty List</h3></center>
+                                        </li>
                                     </ul>
                                 </div>
                             </uib-tab>
                         </uib-tabset>
                     </div>
 
-                    <div class="col-lg-8">
+                    <div class="col-lg-8 col-md-8">
                         <div class="tabbable">
                             <ul class="nav nav-tabs">
                                 <li class="active"><a href="#fooddetail" data-toggle="tab">Your Order</a></li>
