Kevin fix Create Order Menu

--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Waiter/Index.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Waiter/Index.cshtml
@@ -321,7 +321,7 @@
             </div>
             <div class="modal-body" style="height:480px;">
                 <div class="row">
-                    <div class="col-lg-4 col-md-4">
+                    <div class="col-lg-4 ">
                         @*drag and drop kak ria*@
                         <uib-tabset active="active">
                             <uib-tab ng-repeat="tab in menu.Category" heading="{{tab.CategoryName}}">
@@ -342,7 +342,7 @@
                         </uib-tabset>
                     </div>
 
-                    <div class="col-lg-8 col-md-8">
+                    <div class="col-lg-8 ">
                         <div class="tabbable">
                             <ul class="nav nav-tabs">
                                 <li class="active"><a href="#fooddetail" data-toggle="tab">Your Order</a></li>
