--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Shared/_LayoutNoContainer.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Shared/_LayoutNoContainer.cshtml
@@ -6,9 +6,10 @@
     <title>@ViewData["Title"] - RestaurantNetCore</title>
 
     <environment names="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />*@
+        <link href="~/lib/bootstrap/dist/css/yeti.bootstrap.css" rel="stylesheet" />
         <link rel="stylesheet" href="~/css/site.css" />
-        <link rel="stylesheet" href="~/css/media.css" />
+        <link href="~/css/media.css" rel="stylesheet" />
         <script src="~/lib/angular/angular.js"></script>
         <script src="~/lib/angular-resource/angular-resource.js"></script>
         <script src="~/lib/ui-bootstrap.min/ui-bootstrap-tpls.min.js"></script>
@@ -20,9 +21,10 @@
         <script src="~/Angular/Service.js"></script>
     </environment>
     <environment names="Staging,Production">
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/css/bootstrap.min.css"
+        @*<link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
+              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />*@
+        <link href="~/lib/bootstrap/dist/css/yeti.bootstrap.min.css" rel="stylesheet" />
         <script src="~/lib/angular/angular.js"></script>
         <script src="~/lib/angular-resource/angular-resource.js"></script>
         <script src="~/lib/ui-bootstrap.min/ui-bootstrap-tpls.min.js"></script>
@@ -33,6 +35,7 @@
         <script src="~/Angular/Controller.js"></script>
         <script src="~/Angular/Service.js"></script>
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+        <link href="~/css/media.css" rel="stylesheet" />
 
     </environment>
 
