--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Shared/_LayoutNoContainer2.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Shared/_LayoutNoContainer2.cshtml
@@ -6,7 +6,8 @@
     <title>@ViewData["Title"] - RestaurantNetCore</title>
 
     <environment names="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />*@
+        <link href="~/lib/bootstrap/dist/css/yeti.bootstrap.css" rel="stylesheet" />
         <link rel="stylesheet" href="~/css/site.css" />
         <script src="~/lib/angular/angular.js"></script>
         <script src="~/lib/angular-resource/angular-resource.js"></script>
@@ -19,9 +20,10 @@
         <script src="~/Angular/Service.js"></script>
     </environment>
     <environment names="Staging,Production">
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
+        @*<link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/css/bootstrap.min.css"
+            asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
+            asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />*@
+        <link href="~/lib/bootstrap/dist/css/yeti.bootstrap.min.css" rel="stylesheet" />
         <script src="~/lib/angular/angular.js"></script>
         <script src="~/lib/angular-resource/angular-resource.js"></script>
         <script src="~/lib/ui-bootstrap.min/ui-bootstrap-tpls.min.js"></script>
