--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Waiter/Index.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Waiter/Index.cshtml
@@ -300,7 +300,7 @@
 </div>
 
 <div tabindex="-1" id="myModal2" class="modal fade" role="dialog">
-    <div class="modal-dialog" style="width:70%">
+    <div class="modal-dialog" style="width:70%; margin-top:-10px;">
 
         <!-- Modal content-->
         <div class="modal-content">
@@ -342,13 +342,13 @@
                         </uib-tabset>
                     </div>
 
-                    <div class="col-lg-8 ">
+                    <div class="col-lg-8 scroll heigh2" style="overflow-y:auto">
                         <div class="tabbable">
                             <ul class="nav nav-tabs">
                                 <li class="active"><a href="#fooddetail" data-toggle="tab">Your Order</a></li>
                             </ul>
                             <div class="tab-content">
-                                <div id="fooddetail" class="tab-pane active scroll" style="height:50vh;">
+                                <div id="fooddetail" class="tab-pane active" >
                                     <table class="table table-responsive" style="border-bottom-style:hidden">
                                         <thead>
                                             <tr>
@@ -364,11 +364,13 @@
                                                 <td>{{item.MenuName}}</td>
                                                 <td>{{item.Qty}}</td>
                                                 <td>{{item.Price * item.Qty}}</td>
-                                                <td><input class="form-control" ng-model="item.Notes" /></td>
-                                                <td><button class="btn btn-primary" ng-click="delqty(item.MenuID, $index)"><i class="glyphicon glyphicon-remove"></i></button></td>
+                                                <td><input class="form-control input-xs" ng-model="item.Notes" /></td>
+                                                <td><button class="btn btn-primary btn-xs" ng-click="delqty(item.MenuID, $index)"><i class="glyphicon glyphicon-remove"></i></button></td>
                                             </tr>
                                             <tr>
-                                                <td><button type="button" class="btn btn-primary">Click Your Menu</button></td>
+                                                <td>
+                                                    <label>Click Your Menu</label>
+                                                </td>
                                             </tr>
                                         </tbody>
                                     </table>
