--- a/src/NETCore_AuthFramework_PostgresSQL/wwwroot/css/media.css
+++ b/src/NETCore_AuthFramework_PostgresSQL/wwwroot/css/media.css
@@ -2,8 +2,15 @@
         max-height:28vw;
     }
 
+.heigh2{
+    max-height:33vw;
+}
+
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
     .heigh {
         max-height:20vh;
+    }
+    .heigh2{
+    max-height:22vh;
     }
 }
