--- a/src/NETCore_AuthFramework_PostgresSQL/wwwroot/css/media.css
+++ b/src/NETCore_AuthFramework_PostgresSQL/wwwroot/css/media.css
@@ -6,6 +6,10 @@
     max-height:33vw;
 }
 
+.fon{
+    font-size:1.4vw;
+}
+
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
     .heigh {
         max-height:20vh;
