--- a/src/NETCore_AuthFramework_PostgresSQL/wwwroot/css/media.css
+++ b/src/NETCore_AuthFramework_PostgresSQL/wwwroot/css/media.css
@@ -10,11 +10,19 @@
     font-size:1.4vw;
 }
 
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+@media only screen and (min-device-width : 769px) and (max-device-width : 1024px) {
     .heigh {
         max-height:20vh;
     }
     .heigh2{
-    max-height:22vh;
+        max-height:30vh;
+        height:unset;
+    }
+}
+@media (max-device-width : 768px) {
+
+    .heigh2{
+        max-height:17vh;
+        
     }
 }
