--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Shared/_Layout.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Shared/_Layout.cshtml
@@ -73,7 +73,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - Application Framework</p>
+            <p>&copy; 2017 - RestaurantNetCore</p>
         </footer>
     </div>
 
