--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Account/Login.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Account/Login.cshtml
@@ -10,7 +10,7 @@
 
 <h2>@ViewData["Title"].</h2>
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-12">
         <section>
             <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
                 <h4>Use a local account to log in.</h4>
@@ -61,7 +61,7 @@
             </form>
         </section>
     </div>
-    <div class="col-md-4">
+    @*<div class="col-md-4">
         <section>
             <h4>Use another service to log in.</h4>
             <hr />
@@ -91,7 +91,7 @@
                 }
             }
         </section>
-    </div>
+    </div>*@
 </div>
 
 @section Scripts {
