--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Shared/_Layout2.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Shared/_Layout2.cshtml
@@ -69,12 +69,8 @@
             </div>
         </div>
     </div>
-    <div class="">
+    <div class="container-fluid">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; 2017 - Application Framework</p>
-        </footer>
     </div>
 
     <environment names="Development">
