--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Bill/Index.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Bill/Index.cshtml
@@ -33,7 +33,7 @@
                 @Html.DisplayFor(modelitem => item.OrderID)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.BillDate)
+                @Html.DisplayFor(modelItem => item.CreatedDate)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CreatedBy)
