--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Waiter/Index.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Waiter/Index.cshtml
@@ -39,7 +39,9 @@
     input, select, textarea {
         max-width: unset;
     }
+
 </style>
+
 
 <div class="row">
     <div class="col-md-6">
@@ -212,7 +214,7 @@
                         </tr>
                     </table>
                     <div ng-show="pay === true">
-                        <input type="text" ng-model="uang" class="form-control" />
+                        <input type="text" ng-model="uang" onkeydown = "if (event.keyCode == 13) document.getElementById('pay').click()"   class="form-control" />
                         <h2>Kembalian : {{uang-(grandTotal + tax)}}</h2>
                     </div>
 
@@ -233,7 +235,7 @@
                             <button class="btn btn-danger btn-lg" ng-click="CancelPay()">Cancel</button>
                         </div>
                         <div class="btn-group">
-                            <button class="btn btn-success btn-lg" ng-click="GoPay(detailorder.OrderID,uang,grandTotal+tax)">Pay</button>
+                            <button class="btn btn-success btn-lg" id="pay" ng-click="GoPay(detailorder.OrderID,uang,grandTotal+tax)">Pay</button>
                         </div>
                     </div>
                 </div>
@@ -244,37 +246,6 @@
         </div>
     </div>
 </div>
-
-<div class="modal fade" id="ModalEdit">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">CheckOut</h4>
-            </div>
-            <div class="modal-body">
-                <div style="max-height:50vh ; overflow:auto">
-                    <table class="table table-hover">
-                        <tbody>
-                            <tr>
-                                <td>Nasi Goreng</td>
-                                <td><input type="text" value="3" /></td>
-
-                            </tr>
-
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <div class="modal-footer">
-
-                <button type="button" class="btn btn-primary btn-block" data-dismiss="modal" data-target="#ModalCheckOut">Close</button>
-
-            </div>
-        </div>
-    </div>
-</div>
-
 
 <div id="myModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
