--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Shared/_LayoutNoContainer2.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Shared/_LayoutNoContainer2.cshtml
@@ -18,6 +18,7 @@
         <script src="~/Angular/Module.js"></script>
         <script src="~/Angular/Controller.js"></script>
         <script src="~/Angular/Service.js"></script>
+        <script src="~/Angular/Directive.js"></script>
     </environment>
     <environment names="Staging,Production">
         @*<link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/css/bootstrap.min.css"
@@ -33,6 +34,7 @@
         <script src="~/Angular/Module.js"></script>
         <script src="~/Angular/Controller.js"></script>
         <script src="~/Angular/Service.js"></script>
+        <script src="~/Angular/Directive.js"></script>
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
 
     </environment>
