--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Shared/_LoginPartial.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Shared/_LoginPartial.cshtml
@@ -12,7 +12,7 @@
                 <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
             </li>
             <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Log off</button>
+                <button type="submit" class="btn btn-link navbar-btn navbar-link"><i class="glyphicon glyphicon-log-out"></i></button>
             </li>
         </ul>
     </form>
