--- a/src/NETCore_AuthFramework_PostgresSQL/Views/Kitchen/Index2.cshtml
+++ b/src/NETCore_AuthFramework_PostgresSQL/Views/Kitchen/Index2.cshtml
@@ -45,8 +45,8 @@
                                         <td>{{item.Qty}}</td>
                                         <td>{{item.MenuName}}</td>
                                         <td>
-                                            <button ng-if="data.Status == 'Order'" class="btn btn-primary btn-xs" ng-click="CookOrderItem(item.OrderItemID)">Cook</button>
-                                            <button ng-if="data.Status == 'Cook'" class="btn btn-success btn-xs" ng-click="FinishOrderItem(item.OrderItemID)">Done</button>
+                                            <button ng-if="data.Status == 'Order'" class="btn btn-danger btn-xs" ng-click="CookOrderItem(item.OrderItemID)"><i class="glyphicon glyphicon-fire"></i></button>
+                                            <button ng-if="data.Status == 'Cook'" class="btn btn-success btn-xs" ng-click="FinishOrderItem(item.OrderItemID)"><i class="glyphicon glyphicon-ok"></i></button>
                                         </td>
                                     </tr>
                                     <tr ng-if="item.Notes != null && item.Notes != ''">
